# cllm

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: release.yaml
cllm/: __init__.py  cli.py
cllm/utils/: openai_client.py  thread_manager.py
tests/: test_cli.py
utils/: config.py  openai_client.py
