[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_variable = ["cllm/__init__.py:__version__"]
branch = "main"

[tool.semantic_release.publish]
upload_to_pypi = true

[tool.semantic_release.build]
build_command = "python setup.py sdist bdist_wheel"

[tool.semantic_release.commit_parser]
preset = "angular"

[tool.semantic_release.commit]
subject = "build: release v{version}"
author = "github-actions <actions@github.com>"

[tool.semantic_release.tag]
format = "v{version}"

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"

[project]
name = "cllm"
dynamic = ["version"]
description = "CLI to interact with LLM models."
readme = "README.md"
authors = [
    {name = "Ivan Alvarenga", email = "ivan.alvarenga@proto.me"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.7"
dependencies = [
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
cllm = "cllm.cli:main"